# learn-astropy-librarian

./: pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
astropylibrarian/algolia/: client.py
astropylibrarian/workflows/: deleterooturl.py  expirerecords.py  indextutorial.py
